<resources>
    <string name="app_name">追光</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_index">主页</string>
    <string name="title_sport">运动</string>
    <string name="title_mine">我的</string>


    <string name="login_hint">用户登录</string>
    <string name="login">登录 Login</string>
    <string name="user_register">用户注册</string>
    <string name="register">立即注册</string>
    <string name="find_pwd">找回密码</string>
    <string name="modify_pwd">修改密码</string>

    <string name="input_pwd">请输入密码</string>
    <string name="send_code">获取验证码</string>
    <string name="confirm_pwd">再次输入密码</string>
    <string name="input_new_pwd">请输入新的密码</string>

    <string name="input_height">请输入您的身高</string>
    <string name="input_weight">请输入您的体重</string>

    <string name="verify_code">请输入验证码</string>
    <string name="input_name">请输入用户名</string>
    <string name="input_nickname">请输入修改后的昵称</string>
    <string name="input_intro">写一段文字描述下自己吧</string>
    <string name="input_email">请输入邮箱账号</string>
    <string name="agree_protocol">登录即代表同意用户协议和隐私政策</string>
    <string name="read_protocol">我已阅读并同意用户协议和隐私政策</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <string name="today_status">今日情况</string>
    <string name="sport_data">运动数据</string>
    <string name="health_data">健康数据</string>

    <string name="start_run">开始跑步</string>
    <string name="run_tips">跑步方法</string>
    <string name="run_tip_one">1.请保持40分钟以上的运动时间</string>
    <string name="run_tip_two">2.不要跑太快，心率保持在140~160之间</string>

    <string name="my_target">我的目标</string>
    <string name="new_target">新建目标</string>
    <string name="my_record">我的记录</string>
    <string name="modify_info">修改信息</string>
    <string name="logout">退出登录</string>

    <string name="date_month_day">%1$s月%2$s日</string>
    <string name="date_year_month_day">%1$s-%2$s-%3$s</string>
    <string name="time_hour_minuts">%1$s:%2$s</string>
    <string name="target_title">Hi，写下你来到追光的目标吧</string>
    <string name="target_hint">具体的目标更易达成噢</string>

    <string name="go_create_target">去添加目标</string>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string-array name="comment_list">
        <item>目标还是要有的，万一实现了呢？</item>
        <item>跑一次半马～～</item>
        <item>练出马甲线！！</item>
        <item>跑步一个月，瘦身成闪电！⚡️</item>
        <item>定个小目标，瘦他十几斤</item>
    </string-array>
</resources>
