<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorPurple"
    >

    <TextView
        android:layout_marginLeft="40dp"
        android:text="@string/login_hint"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/email_input_view"
        android:layout_gravity="center"
        android:background="@drawable/shape_input"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:src="@drawable/email"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/name_edit"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:textColorHint = "@color/colorGrey"
            android:layout_marginLeft="6dp"
            android:hint="@string/input_name"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/pwd_input_view"
        android:layout_gravity="center"
        android:background="@drawable/shape_input"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:src="@drawable/password"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:background="@null"
            android:hint="@string/input_pwd"
            android:textColor="@color/colorDarkGrey"
            android:inputType="textPassword"
            android:textColorHint="@color/colorGrey" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="40dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/go_register_tv"
            android:textSize="15sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

        <TextView
            android:id="@+id/find_pwd"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_pwd"/>
    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@drawable/selector_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
    />

    <TextView
        android:textColor="@color/colorGrey"
        android:layout_gravity="bottom|center"
        android:text="@string/agree_protocol"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>