<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorPurple"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:layout_marginLeft="40dp"
        android:text="@string/user_register"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/email_input_view"
        android:layout_gravity="center"
        android:background="@drawable/shape_input"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:src="@drawable/email"
            android:padding="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/reg_name_edit"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:textColorHint = "@color/colorGrey"
            android:layout_marginLeft="6dp"
            android:hint="@string/input_name"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"/>


        <Button
            android:id="@+id/reg_send_code"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/selector_btn"
            android:text="@string/send_code"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/name_input_view"
        android:layout_gravity="center"
        android:background="@drawable/shape_input"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:src="@drawable/email"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/reg_email_edit"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="6dp"
            android:textColorHint = "@color/colorGrey"
            android:hint="@string/input_email"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/pwd_input_view"
        android:layout_gravity="center"
        android:background="@drawable/shape_input"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:src="@drawable/password"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/reg_pwd_edit"
            android:background="@null"
            android:inputType="textPassword"
            android:layout_marginLeft="6dp"
            android:textColorHint = "@color/colorGrey"
            android:hint="@string/input_pwd"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/confirm_input_view"
        android:layout_gravity="center"
        android:background="@drawable/shape_input"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:src="@drawable/password"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/confirm_edit"
            android:background="@null"
            android:inputType="textPassword"
            android:layout_marginLeft="6dp"
            android:textColorHint = "@color/colorGrey"
            android:hint="@string/confirm_pwd"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginVertical="14dp">

        <CheckBox
            android:id="@+id/res_checkbox"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:layout_marginVertical="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_protocol"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@drawable/selector_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        />

</LinearLayout>