<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layout_bg"
    tools:context=".activities.NewTargetActivity">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/item_edge"
            android:src="@drawable/ic_back" />

        <TextView
            android:textColor="@color/stateBar"
            android:text="@string/new_target"
            android:textSize="@dimen/textsize_8"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/target_title"
        android:textColor="@color/stateBar"
        android:textSize="@dimen/textsize_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/shape_input">

        <EditText
            android:id="@+id/target_edit"
            android:textColor="@color/colorDarkGrey"
            android:hint="我要瘦成闪电⚡️"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:src="@drawable/ic_flight"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <Button
        android:id="@+id/set_target"
        android:layout_gravity="center"
        android:text="@string/sure"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@drawable/selector_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        />

</LinearLayout>