<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/tabbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_index"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/selector_tab_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@color/stateBar"
                android:text="@string/title_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab_sport"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/selector_tab_sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/title_sport"
                android:textColor="@color/stateBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_mine"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/selector_tab_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/title_mine"
                android:textColor="@color/stateBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>